syntax = "proto3";

package apis;

option java_package="com.proto.apis";
option java_multiple_files=true;

message SumRequest{
    int64 a=1;
    int64 b=2;
}

message SumResponse{
    int64 result=1;
}

message PrimeRequest{
    int64 a=1;
}

message PrimeResponse{
    int64 result=1;
}

message AverageRequest{
    int64 a=1;
}

message AverageResponse{
    int64 result=1;
}

message MaxRequest{
    int64 a=1;
}

message MaxResponse{
    int64 result=1;
}
service Service{
    //UnaryAPI
    rpc Sum(SumRequest) returns (SumResponse){};

    //Server Streaming API
    rpc PrimeDecomposition(PrimeRequest) returns (stream PrimeResponse) {};

    //Client Streaming API
    rpc Average(stream AverageRequest) returns (AverageResponse) {};

    //BiDirectional API
    rpc Max(stream MaxRequest) returns(stream MaxResponse) {};

}


